package cetty.zurg.slave;

import "cetty/config/config_options.proto";

message SlaveServiceConfig {
    optional string slave_name = 1 [default = "zurg-slave"];
	optional string     prefix = 2 [default = "/tmp"];
	
	optional string master_address = 3 [default = "127.0.0.1:6636"];
	
	required int32    zombie_interval = 20 [default=300];
	required int32 heartbeat_interval = 21 [default=60];
	
	optional bool     redirect_stdout = 22;
	optional bool     redirect_stderr = 23;
}
